--- a/phase2.html
+++ b/phase2.html
@@ -12,7 +12,8 @@
 
 <body>
     <form id="regForm">
-        <div class="tab">Address:
+        <h1>Address:</h1>
+        <div class="tab">
             <p>
                 <select name="cities" id="city" onchange="validateCity(this)">
                     <option value="">Choose City</option>
@@ -26,12 +27,13 @@
 
         <div style="overflow:auto;">
             <div style="float:right;">
-                <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
+                <button type="button" id="prevBtn"><a href="./phase1.html">Previous</a></button>
                 <button type="button" id="nextBtn"><a href="./phase3.html">Next</a></button>
             </div>
         </div>
         <!-- Circles which indicates the steps of the form: -->
         <div style="text-align:center;margin-top:40px;">
+            <span class="step finish"></span>
             <span class="step finish"></span>
             <span class="step active"></span>
             <span class="step"></span>
