--- a/phase3.html
+++ b/phase3.html
@@ -12,7 +12,8 @@
 
 <body>
     <form id="regForm">
-        <div class="tab" id="imgAndHobbies">Image and Hobbies:
+        <h1>Image and Hobbies:</h1>
+        <div class="tab" id="imgAndHobbies">
             <p><input type="url" name="" id="avatarUrl">
                 <img src="https://icon-library.com/images/anonymous-avatar-icon/anonymous-avatar-icon-25.jpg"
                     alt="preview" id="imgPreview">
@@ -26,11 +27,12 @@
             <div style="float:right;">
 
                 <button type="button" id="prevBtn"><a href="./phase2.html">Previous</a></button>
-                <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
+                <button type="button" id="nextBtn"><a href="./phase4.html">Next</a></button>
             </div>
         </div>
         <!-- Circles which indicates the steps of the form: -->
         <div style="text-align:center;margin-top:40px;">
+            <span class="step finish"></span>
             <span class="step finish"></span>
             <span class="step  finish"></span>
             <span class="step active"></span>
