--- a/phase4.html
+++ b/phase4.html
@@ -25,10 +25,10 @@
         <!-- Circles which indicates the steps of the form: -->
         <div style="text-align:center;margin-top:40px;">
             <span class="step finish"></span>
+            <span class="step finish"></span>
+            <span class="step finish"></span>
+            <span class="step finish"></span>
             <span class="step active"></span>
-            <span class="step"></span>
-            <span class="step"></span>
-            <span class="step"></span>
 
         </div>
     </form>
