--- a/phase3.html
+++ b/phase3.html
@@ -14,9 +14,9 @@
     <form id="regForm">
         <h1>Image and Hobbies:</h1>
         <div class="tab" id="imgAndHobbies">
-            <p><input class="input invalid" type="url" name="" id="avatarUrl">
+            <p><input class="input invalid" type="url" name="" id="avatarUrl" oninput="validImage(this)">
                 <img src="https://icon-library.com/images/anonymous-avatar-icon/anonymous-avatar-icon-25.jpg"
-                    alt="preview" id="imgPreview">
+                    alt="preview" id="imgPreview" >
             </p>
             <p>Hobbies:</p>
         </div>
