--- a/agreement.html
+++ b/agreement.html
@@ -21,7 +21,7 @@
         </div>
         <div style="overflow:auto;">
             <div style="float:right;">
-                <button type="button" id="nextBtn" class="hidden"><a id="link" href="./phase1.html" >Start</a></button>
+                <button type="button" id="nextBtn" class="hidden"><a id="link" href="./phase1.html" onclick="saveData(1)">Start</a></button>
             </div>
         </div>
         <!-- Circles which indicates the steps of the form: -->
