--- a/phase1.html
+++ b/phase1.html
@@ -21,7 +21,7 @@
         <div style="overflow:auto;">
             <div style="float:right;">
                 <button type="button" id="prevBtn"><a href="./agreement.html">Previous</a></button>
-                <button type="button" id="nextBtn" class="hidden"><a href="./phase2.html">Next</a></button>
+                <button type="button" id="nextBtn" class="hidden"><a href="./phase2.html" onclick="saveData(2)">Next</a></button>
             </div>
         </div>
         <!-- Circles which indicates the steps of the form: -->
