--- a/phase2.html
+++ b/phase2.html
@@ -30,7 +30,7 @@
         <div style="overflow:auto;">
             <div style="float:right;">
                 <button type="button" id="prevBtn"><a href="./phase1.html">Previous</a></button>
-                <button type="button" id="nextBtn" class="hidden"><a href="./phase3.html">Next</a></button>
+                <button type="button" id="nextBtn" class="hidden"><a href="./phase3.html" onclick="saveData(3)">Next</a></button>
             </div>
         </div>
         <!-- Circles which indicates the steps of the form: -->
