--- a/phase3.html
+++ b/phase3.html
@@ -26,7 +26,7 @@
         <div style="overflow:auto;">
             <div style="float:right;">
 
-                <button type="button" id="prevBtn"><a href="./phase2.html">Previous</a></button>
+                <button type="button" id="prevBtn"><a href="./phase2.html" onclick="saveData(4)">Previous</a></button>
                 <button type="button" id="nextBtn" class="hidden"><a href="./phase4.html">Next</a></button>
             </div>
         </div>
