--- a/phase4.html
+++ b/phase4.html
@@ -19,7 +19,7 @@
         </div>
         <div style="overflow:auto;">
             <div style="float:right;">
-                <button type="button" id="nextBtn"><a href="./agreement.html">Create a new one</a></button>
+                <button type="button" id="nextBtn"><a href="./agreement.html" onclick="localStorage.clear()">Create a new one</a></button>
             </div>
         </div>
         <!-- Circles which indicates the steps of the form: -->
