--- a/phase3.html
+++ b/phase3.html
@@ -26,8 +26,8 @@
         <div style="overflow:auto;">
             <div style="float:right;">
 
-                <button type="button" id="prevBtn"><a href="./phase2.html" onclick="saveData(4)">Previous</a></button>
-                <button type="button" id="nextBtn" class="hidden"><a href="./phase4.html">Next</a></button>
+                <button type="button" id="prevBtn"><a href="./phase2.html" >Previous</a></button>
+                <button type="button" id="nextBtn" class="hidden"><a href="./phase4.html" onclick="saveData(4)">Next</a></button>
             </div>
         </div>
         <!-- Circles which indicates the steps of the form: -->
@@ -42,5 +42,5 @@
 </body>
 
 <script src="validations.js"></script>
-
+<script src="buttonsMovement.js"></script>
 </html>
