--- a/phase3.html
+++ b/phase3.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="styling.css">
 </head>
 
-<body>
+<body onload="reloadData(3)">
     <form id="regForm">
         <h1>Image and Hobbies:</h1>
         <div class="tab" id="imgAndHobbies">
@@ -26,8 +26,9 @@
         <div style="overflow:auto;">
             <div style="float:right;">
 
-                <button type="button" id="prevBtn"><a href="./phase2.html" >Previous</a></button>
-                <button type="button" id="nextBtn" class="hidden"><a href="./phase4.html" onclick="saveData(4)">Next</a></button>
+                <button type="button" id="prevBtn"><a href="./phase2.html">Previous</a></button>
+                <button type="button" id="nextBtn" class="hidden"><a href="./phase4.html"
+                        onclick="saveData(4)">Next</a></button>
             </div>
         </div>
         <!-- Circles which indicates the steps of the form: -->
@@ -43,4 +44,5 @@
 
 <script src="validations.js"></script>
 <script src="buttonsMovement.js"></script>
+
 </html>
