--- a/phase3.html
+++ b/phase3.html
@@ -14,11 +14,14 @@
     <form id="regForm">
         <h1>Image and Hobbies:</h1>
         <div class="tab" id="imgAndHobbies">
-            <p><input class="input invalid" type="url" name="" id="avatarUrl" oninput="validImage(this)">
+            <p>
+                <label for="avatarUrl"><img src="icons/imgUrl.png" alt="img" class="icons"></label>
+                <input class="input invalid" type="url" name="" id="avatarUrl" oninput="validImage(this)">
                 <img src="https://icon-library.com/images/anonymous-avatar-icon/anonymous-avatar-icon-25.jpg"
                     alt="preview" id="imgPreview">
             </p>
             <p>Hobbies:</p>
+            <img src="icons/hobbies.png" alt="hobbies" class="icons"> 
         </div>
 
         </div>
