fixing bugs and split files

--- a/agreement.html
+++ b/agreement.html
@@ -38,6 +38,6 @@
 </body>
 
 <script src="validations.js"></script>
-<script src="buttonsMovement.js"></script>
+<script src="manageData.js"></script>
 
 </html>
