--- a/phase2.html
+++ b/phase2.html
@@ -51,6 +51,7 @@
 </body>
 
 <script src="validations.js"></script>
-<script src="buttonsMovement.js"></script>
+<script src="getCities.js"></script>
+<script src="manageData.js"></script>
 
 </html>
