--- a/phase3.html
+++ b/phase3.html
@@ -21,7 +21,7 @@
                     alt="preview" id="imgPreview">
             </p>
             <p>Hobbies:</p>
-            <img src="icons/hobbies.png" alt="hobbies" class="icons"> 
+            <img src="icons/hobbies.png" alt="hobbies" class="icons">
         </div>
 
         </div>
@@ -46,6 +46,7 @@
 </body>
 
 <script src="validations.js"></script>
+<script src="getHobbies.js"></script>
 <script src="buttonsMovement.js"></script>
 
 </html>
