--- a/phase4.html
+++ b/phase4.html
@@ -36,7 +36,7 @@
 </body>
 
 <script src="validations.js"></script>
-<script src="buttonsMovement.js"></script>
+<script src="manageData.js"></script>
 <script src="showInfo.js"></script>
 
 </html>
