--- a/phase1.html
+++ b/phase1.html
@@ -41,6 +41,6 @@
 </body>
 
 <script src="validations.js"></script>
-<script src="buttonsMovement.js"></script>
+<script src="manageData.js"></script>
 
 </html>
