fixing bugs and split files2

--- a/phase3.html
+++ b/phase3.html
@@ -47,6 +47,6 @@
 
 <script src="validations.js"></script>
 <script src="getHobbies.js"></script>
-<script src="buttonsMovement.js"></script>
+<script src="manageData.js"></script>
 
 </html>
