--- a/agreement.html
+++ b/agreement.html
@@ -17,7 +17,8 @@
                 voluptas deserunt consequuntur! Assumenda, alias aliquid rerum laboriosam nostrum accusamus totam atque,
                 dolores, fugiat quis adipisci.</p>
             <p>Do you Agree?</p>
-            <p><input type="checkbox" class="input invalid" onclick="agree(this)">Yes</p>
+            <p id="pCheck"><label for=""><input type="checkbox" id="agreeCheck" class="input invalid"
+                        onclick="agree(this)"><span>Yes</span></label></p>
         </div>
         <div style="overflow:auto;">
             <div style="float:right;">
