--- a/phase3.html
+++ b/phase3.html
@@ -15,11 +15,13 @@
         <h1>Image and Hobbies:</h1>
         <div class="tab" id="imgAndHobbies">
             <p>
+                <img src="icons/imgUrl.png" class="icon"><span> Link to your image:</span>
                 <input class="input invalid" type="url" name="" id="avatarUrl" oninput="validImage(this)">
                 <img src="https://icon-library.com/images/anonymous-avatar-icon/anonymous-avatar-icon-25.jpg"
                     alt="preview" id="imgPreview">
             </p>
-            <p>Hobbies:</p>
+            <p>
+                <img src="icons/hobbies.png" class="icon"><span> Hobbies:</span></p>
         </div>
 
         </div>
