--- a/phase1.html
+++ b/phase1.html
@@ -14,11 +14,10 @@
     <form id="regForm">
         <h1>Let us know more about you:</h1>
         <div class="tab">
-            <p><input class="input invalid" id="fullname" input placeholder="Full name..." oninput="validName(this)"
-                    name="fname"></p>
-            <p><input class="input invalid" id="email" input placeholder="E-mail..." oninput="validEmail(this)"
+            <p class="icons"><img src="icons/fullName.png" class="icon"><span> Full name:</span><input class="input invalid fullname_icon" id="fullname" input placeholder="Full name..." oninput="validName(this)"name="fname"></p>
+            <p><img src="icons/email.png" class="icon"><span> Email:</span><input class="input invalid" id="email" input placeholder="E-mail..." oninput="validEmail(this)"
                     name="email"></p>
-            <p><input class="input invalid" id="bDay" input type="date" placeholder="E-mail..."
+            <p><img src="icons/bdate.png" class="icon"><span> Birth of date:</span><input class="input invalid" id="bDay" input type="date" placeholder="E-mail..."
                     oninput="validDate(this)" name="email"></p>
         </div>
         <div style="overflow:auto;">
