--- a/agreement.html
+++ b/agreement.html
@@ -16,6 +16,10 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum ab atque quibusdam iusto voluptatem
                 voluptas deserunt consequuntur! Assumenda, alias aliquid rerum laboriosam nostrum accusamus totam atque,
                 dolores, fugiat quis adipisci.</p>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum ab atque quibusdam iusto voluptatem
+                voluptas deserunt consequuntur! Assumenda, alias aliquid rerum laboriosam nostrum accusamus totam atque,
+                dolores, fugiat quis adipisci.</p>
+
             <p>Do you Agree?</p>
             <p id="pCheck"><label for=""><input type="checkbox" id="agreeCheck" class="input invalid"
                         onclick="agree(this)"><span>Yes</span></label></p>
